--- a/frontend/arkadia_web-master/package.json
+++ b/frontend/arkadia_web-master/package.json
@@ -35,5 +35,9 @@
     "hooks": {
       "pre-commit": "pretty-quick --staged"
     }
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
