--- a/frontend/arkadia_web-master/package.json
+++ b/frontend/arkadia_web-master/package.json
@@ -13,11 +13,12 @@
     "@material-ui/icons": "^3.0.1",
     "ajv": "^6.5.4",
     "axios": "^0.18.0",
-    "react": "^16.5.2",
+    "react": "^16.6.0",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
-    "recharts": "^1.3.3"
+    "recharts": "^1.3.3",
+    "scripts": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
