--- a/frontend/arkadia_web-master/package.json
+++ b/frontend/arkadia_web-master/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "config": {
     "api": {
-      "development": "http://localhost:3001/api",
+      "development": "http://localhost:3001",
       "production": "https://arkadia-api.herokuapp.com/api"
     }
   },
