--- a/backend/arkadia_ew API/package.json
+++ b/backend/arkadia_ew API/package.json
@@ -4,6 +4,7 @@
   "description": "Creacion de un API con Node.Js",
   "main": "server.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongodb": "^3.1.8"
   },
