--- a/frontend/arkadia_web-master/package.json
+++ b/frontend/arkadia_web-master/package.json
@@ -13,6 +13,7 @@
     "@material-ui/icons": "^3.0.1",
     "ajv": "^6.5.4",
     "axios": "^0.18.0",
+    "google-map-react": "^1.0.9",
     "react": "^16.6.0",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
