--- a/frontend/arkadia_web-master/package.json
+++ b/frontend/arkadia_web-master/package.json
@@ -14,11 +14,13 @@
     "ajv": "^6.5.4",
     "axios": "^0.18.0",
     "google-map-react": "^1.0.9",
-    "react": "^16.6.0",
-    "react-dom": "^16.5.2",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "react-select": "^2.1.1",
+    "reactstrap": "^6.5.0",
     "recharts": "^1.3.3",
     "scripts": "^0.1.0"
   },
