--- a/frontend/arkadia-mobile/package.json
+++ b/frontend/arkadia-mobile/package.json
@@ -13,6 +13,7 @@
     "expo": "^31.0.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-dialog": "^5.4.0",
     "react-native-floating-labels": "^1.1.9"
   },
   "devDependencies": {
